# Semestralka

./: CMakeLists.txt  PlayingField.cpp  PlayingField.h  README.md  main.cpp  server.cpp  server.h  serverMain.cpp
